--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile 'org.springframework.cloud:spring-cloud-starter-contract-verifier'
+    testCompile 'io.rest-assured:rest-assured:3.0.7'
 
     compile("org.springframework.boot:spring-boot-starter-web")
     testCompile("org.springframework.boot:spring-boot-starter-test")
@@ -32,6 +33,7 @@ buildscript {
         classpath "org.springframework.cloud:spring-cloud-contract-gradle-plugin:2.0.0.M8"
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.4.RELEASE")
         classpath('se.transmode.gradle:gradle-docker:1.2')
+
     }
 }
 
@@ -43,7 +45,7 @@ dependencyManagement {
 
 // In this section you define all Spring Cloud Contract Verifier Gradle Plugin properties
 contracts {
-    baseClassForTests = 'com.example.MvcTest'
+    baseClassForTests = 'org.jpgough.birthday.MvcTest'
     // fully qualified name to a class that will be the base class for your generated test classes
 }// Unnecessary if you're using Spring Cloud Stub Runner only
 buildscript {
