--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ dependencies {
 
     compile("org.springframework.boot:spring-boot-starter")
     compile("org.springframework:spring-web")
+
+    compile("io.springfox:springfox-swagger2:2.7.0")
+    compile("io.springfox:springfox-swagger-ui:2.7.0")
 }
 
 buildscript {
